# pallet

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  README.tpl
examples/: simple.rs
pallet-macros/: Cargo.toml
pallet-macros/src/: lib.rs
src/: db.rs  field_value.rs  lib.rs  search.rs
src/search/: as_query.rs  field_value.rs  params.rs  scored_ids.rs
