[package]
name = "pallet"
version = "0.4.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Document store built with sled and tantivy"
readme = "README.md"
repository = "https://github.com/kardeiz/pallet"
keywords = ["database", "datastore", "search", "full-text", "tantivy", "sled", ]
categories = ["database-implementations", "data-structures"]

[dependencies]
tantivy = "0.12"
sled = { version = "0.31", path = "../sled-alt" }
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
thiserror = "1.0.10"
rayon = "1.3.0"
pallet-macros = { path = "./pallet-macros", version = "0.4" }
[dev-dependencies]
tempfile = "3.1.0"
