[package]
name = "pallet"
version = "0.5.1"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Document store built with sled and tantivy"
readme = "README.md"
repository = "https://github.com/kardeiz/pallet"
keywords = ["database", "datastore", "search", "tantivy", "sled", ]
categories = ["database-implementations", "data-structures"]

[dependencies]
tantivy = "0.12"
sled = { version = "0.31", path = "../sled" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rayon = "1"
pallet-macros = { path = "./pallet-macros", version = "0.4" }
tempfile = "3.1"
