[package]
name = "pallet"
version = "0.6.1"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Document store built with sled and tantivy"
readme = "README.md"
repository = "https://github.com/kardeiz/pallet"
keywords = ["database", "datastore", "search", "tantivy", "sled"]
categories = ["database-implementations", "data-structures"]

[dependencies]
tantivy = "0.14"
sled = { version = "0.34.6" }
bincode = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rayon = "1"
pallet-macros = { path = "./pallet-macros", version = "0.4" }
serde_cbor = { version = "0.11.1", optional = true }

[dev-dependencies]
tempfile = "3.2"

[features]
default = ["bincode"]
